--- a/roles/zsh/templates/zshrc.j2
+++ b/roles/zsh/templates/zshrc.j2
@@ -140,7 +140,7 @@ if [[ -o interactive && (-z "$CURSOR_AGENT" && "$TERM_PROGRAM" != "vscode") ]]; 
   alias json="jless"
   alias yless="jless --yaml"
   alias bap="bat package.json"
-  alias enis='aws ec2 describe-network-interfaces --output table --filters "Name=status,Values=in-use" --query "NetworkInterfaces[].{eni: NetworkInterfaceId, attached: Attachment.Status, vpc: VpcId, az: AvailabilityZone, subnet: SubnetId, type: InterfaceType, privateIp: PrivateIpAddress, nGroups: Groups.length(@)}"'
+  alias enis='aws ec2 describe-network-interfaces --output table --filters "Name=status,Values=in-use" --query "NetworkInterfaces[].{eni: NetworkInterfaceId, attached: Attachment.Status, vpc: VpcId, az: AvailabilityZone, subnet: SubnetId, type: InterfaceType, privateIp: PrivateIpAddress, publicIp: Association.PublicIp, nGroups: Groups.length(@)}"'
   alias npmaws="npm run aws-login"
   alias mise-zsh='eval "$(mise activate zsh)"'
   # awk '/pattern/,0' starts printing from first match until EOF
@@ -199,7 +199,6 @@ export PATH="$PATH:{{ python_user_base.stdout }}/bin"
 # Fix a "bug" with Python fork
 export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
 
-# export HOMEBREW_GITHUB_API_TOKEN="{{ homebrew_api_token }}"
 alias chrome="/Applications/Google\ Chrome.app/Contents/MacOS/Google\ Chrome"
 
 
