--- a/roles/aws/templates/awscli.xml.j2
+++ b/roles/aws/templates/awscli.xml.j2
@@ -6,7 +6,7 @@
       <key>choiceAttribute</key>
       <string>customLocation</string>
       <key>attributeSetting</key>
-      <string>/Users/joni.hamalainen/awscli2</string>
+      <string>{{ aws_cli_location }}</string>
       <key>choiceIdentifier</key>
       <string>default</string>
     </dict>
