--- a/roles/zsh/templates/zshrc.j2
+++ b/roles/zsh/templates/zshrc.j2
@@ -177,21 +177,20 @@ fi
 ## END OF INTERACTIVE INIT ##
 #############################
 
-# Mise https://github.com/jdx/mise
-command -v mise &>/dev/null && eval "$(mise activate zsh)"
-
-
-# Python path (powerline tec)
-# export PATH="$PATH:$HOME/Library/Python/{{ python_version }}/bin"
 
 # pyenv setup: https://github.com/pyenv/pyenv#set-up-your-shell-environment-for-pyenv
 export PYENV_ROOT="$HOME/.pyenv"
 command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"
 eval "$(pyenv init -)"
 # With pyenv-virtualenv plugin
-eval "$(pyenv virtualenv-init -)"
+# eval "$(pyenv virtualenv-init -)"
 # Set Python user site to PATH: (python3 -m site --user-base)
-export PATH="$PATH:{{ python_user_base.stdout }}/bin"
+# export PATH="$PATH:{{ python_user_base.stdout }}/bin"
+
+
+# MISE after pyenv so it prepends itself before pyenv in PATH (to handle python when requested)
+# Mise https://github.com/jdx/mise
+command -v mise &>/dev/null && eval "$(mise activate zsh)"
 
 # pip3 completion errors https://github.com/pypa/pip/issues/12166
 # source <(pip3 completion --zsh)
